--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="about-text">
                     <p>
                         I'm a Software Engineering student at Western Governors University, set to graduate in May 2026. 
-                        Most recent work was as a QA Lead/Manager at UPS Healthcare, I bring a unique perspective combining quality 
+                        Most recent work as a QA Lead at UPS Healthcare, I bring a unique perspective combining quality 
                         assurance expertise with software development skills.
                     </p>
                     <p>
@@ -301,7 +301,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <a href="/cdn-cgi/l/email-protection#1d787074716433797471717c7379786f2f2d5d7a707c7471337e7270"><span class="__cf_email__" data-cfemail="086d65616471266c61646469666c6d7a3a38486f65696164266b6765">[email&#160;protected]</span></a>
+                             <a href="mailto:emily.dillander20@gmail.com">emily.dillander20@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -352,4 +352,12 @@
             <p>&copy; 2026 Emily Squires. Built with HTML, CSS, and JavaScript.</p>
             <div class="footer-links">
                 <a href="https://github.com/esquires14" target="_blank">GitHub</a>
-                <a h
+                <a href="https://linkedin.com/in/emily-squires-swe" target="_blank">LinkedIn</a>
+                <a href="mailto:emily.dillander20@gmail.com">Email</a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
